examples/type_system/failing/120_match_pipe_separator.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/120_match_pipe_separator.flx
// error[E034]: Invalid Match Arm Separator
//
// Match arms are separated by `,` in Flux, not `|`.
//
//   examples/type_system/failing/120_match_pipe_separator.flx:24:30
//    |
// 24 |     let x = match 1 { 0 -> 0 | _ -> 1 }
//    |                              ^
//
// Hint:
//   Replace `|` with `,`.
//
// Note:
//   while parsing function `main` > `match` expression
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

fn main() -> Unit {
    let x = match 1 { 0 -> 0 | _ -> 1 }
    x
}
